[gd_scene load_steps=27 format=3 uid="uid://bx8xatwwg81lh"]

[ext_resource type="Texture2D" uid="uid://scynp0va5l21" path="res://dynamic/5_title_screen/image/menu_background.png" id="1_6n2bm"]
[ext_resource type="Script" path="res://dynamic/5_title_screen/menu.gd" id="1_7txdb"]
[ext_resource type="Texture2D" uid="uid://kjjrldglgd1i" path="res://dynamic/slime/slime_jump_1.png" id="2_v6ktv"]
[ext_resource type="FontFile" uid="uid://cr8el0yjdde3p" path="res://static/font/DNFBitBitTTF.ttf" id="3_3dttr"]
[ext_resource type="Texture2D" uid="uid://c1brdtdj8gjiq" path="res://dynamic/slime/slime_jump_2.png" id="3_4kx3r"]
[ext_resource type="AudioStream" uid="uid://dyr5k7evqtx1t" path="res://static/audio/common/button_sounds/button_sound_1.mp3" id="3_k3155"]
[ext_resource type="Texture2D" uid="uid://cyw2uuwy8gt1n" path="res://dynamic/slime/slime_jump_3.png" id="4_7ghbs"]
[ext_resource type="Texture2D" uid="uid://du2bx78ds3p7x" path="res://dynamic/slime/slime_jump_4.png" id="5_g51sc"]
[ext_resource type="Texture2D" uid="uid://chippl036dp4f" path="res://dynamic/slime/slime_jump_5.png" id="6_dn17b"]
[ext_resource type="Texture2D" uid="uid://dxv1hlk4krghi" path="res://dynamic/slime/slime_jump_6.png" id="7_kqkjp"]
[ext_resource type="Texture2D" uid="uid://d3274faejs8dk" path="res://dynamic/slime/slime_jump_7.png" id="8_30f71"]
[ext_resource type="Texture2D" uid="uid://dcdnxmmqep7jw" path="res://dynamic/slime/slime_jump_8.png" id="9_rrox6"]
[ext_resource type="Texture2D" uid="uid://c3jkq4ym28lro" path="res://dynamic/slime/slime_jump_9.png" id="10_umy21"]
[ext_resource type="Texture2D" uid="uid://uhum03wfpdq7" path="res://dynamic/slime/slime_jump_10.png" id="11_7klre"]
[ext_resource type="Texture2D" uid="uid://caajsnyl8bitk" path="res://dynamic/slime/slime_jump_11.png" id="12_rwnsp"]
[ext_resource type="AudioStream" uid="uid://c4qsrib6wqpv7" path="res://static/audio/common/bgm/game_bgm_1(retro).mp3" id="17_x38mp"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_12q8x"]
bg_color = Color(0.184314, 0.168627, 0.160784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bplh1"]
bg_color = Color(0.709804, 0.717647, 0.501961, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0o1gf"]
bg_color = Color(0.709804, 0.717647, 0.501961, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_geo8h"]
bg_color = Color(0.184314, 0.168627, 0.160784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0w73a"]
bg_color = Color(0.709804, 0.717647, 0.501961, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_57n1i"]
bg_color = Color(0.184314, 0.168627, 0.160784, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wy5jm"]
bg_color = Color(0.709804, 0.717647, 0.501961, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n7dfv"]
bg_color = Color(0.709804, 0.717647, 0.501961, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_b5exc"]
font_size = 83
outline_size = 7
outline_color = Color(0, 0, 0, 1)

[sub_resource type="SpriteFrames" id="SpriteFrames_4w12h"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_v6ktv")
}, {
"duration": 1.0,
"texture": ExtResource("3_4kx3r")
}, {
"duration": 1.0,
"texture": ExtResource("4_7ghbs")
}, {
"duration": 1.0,
"texture": ExtResource("5_g51sc")
}, {
"duration": 1.0,
"texture": ExtResource("6_dn17b")
}, {
"duration": 1.0,
"texture": ExtResource("7_kqkjp")
}, {
"duration": 1.0,
"texture": ExtResource("8_30f71")
}, {
"duration": 1.0,
"texture": ExtResource("9_rrox6")
}, {
"duration": 1.0,
"texture": ExtResource("10_umy21")
}, {
"duration": 1.0,
"texture": ExtResource("11_7klre")
}, {
"duration": 1.0,
"texture": ExtResource("12_rwnsp")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Menu" type="Node2D"]
process_mode = 3
script = ExtResource("1_7txdb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1200.0
offset_bottom = 648.0
color = Color(0.54902, 0.756863, 0.262745, 1)

[node name="TextureRect" type="TextureRect" parent="ColorRect"]
layout_mode = 0
offset_right = 1200.0
offset_bottom = 648.0
texture = ExtResource("1_6n2bm")

[node name="Start_Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 384.0
offset_top = 232.0
offset_right = 816.0
offset_bottom = 279.0
theme_override_fonts/font = ExtResource("3_3dttr")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_12q8x")
theme_override_styles/hover = SubResource("StyleBoxFlat_bplh1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/focus = SubResource("StyleBoxFlat_0o1gf")
text = "시 작"

[node name="Item_Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 384.0
offset_top = 296.0
offset_right = 816.0
offset_bottom = 343.0
theme_override_fonts/font = ExtResource("3_3dttr")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_12q8x")
theme_override_styles/hover = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/focus = SubResource("StyleBoxFlat_0o1gf")
text = "아 이 템"

[node name="Store_Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 384.0
offset_top = 360.0
offset_right = 816.0
offset_bottom = 407.0
theme_override_fonts/font = ExtResource("3_3dttr")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_geo8h")
theme_override_styles/hover = SubResource("StyleBoxFlat_0w73a")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/focus = SubResource("StyleBoxFlat_0o1gf")
text = "상 점"

[node name="Setting_Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 384.0
offset_top = 424.0
offset_right = 816.0
offset_bottom = 471.0
theme_override_fonts/font = ExtResource("3_3dttr")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_57n1i")
theme_override_styles/hover = SubResource("StyleBoxFlat_wy5jm")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/focus = SubResource("StyleBoxFlat_0o1gf")
text = "설 정"

[node name="Quit_Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 384.0
offset_top = 488.0
offset_right = 816.0
offset_bottom = 535.0
theme_override_fonts/font = ExtResource("3_3dttr")
theme_override_font_sizes/font_size = 35
theme_override_styles/normal = SubResource("StyleBoxFlat_12q8x")
theme_override_styles/hover = SubResource("StyleBoxFlat_n7dfv")
theme_override_styles/pressed = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/disabled = SubResource("StyleBoxFlat_0o1gf")
theme_override_styles/focus = SubResource("StyleBoxFlat_0o1gf")
text = "끝 내 기"

[node name="Slayer_Survival" type="Label" parent="."]
offset_left = 296.0
offset_top = 24.0
offset_right = 904.0
offset_bottom = 115.0
theme_override_fonts/font = ExtResource("3_3dttr")
text = "Slayer Survival"
label_settings = SubResource("LabelSettings_b5exc")

[node name="version" type="Label" parent="."]
offset_left = 1067.0
offset_top = 3.0
offset_right = 1210.0
offset_bottom = 31.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_3dttr")
theme_override_font_sizes/font_size = 20
text = "v 1.0.0 (Test)"

[node name="Slime" type="Node2D" parent="."]

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Slime"]
position = Vector2(334, 617)
scale = Vector2(3.13426, 3.72619)
sprite_frames = SubResource("SpriteFrames_4w12h")
autoplay = "default"
frame_progress = 0.127648
speed_scale = 2.0

[node name="bgm" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("17_x38mp")
volume_db = -20.0
autoplay = true

[node name="Button_sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(900, 220)
stream = ExtResource("3_k3155")
volume_db = -5.0

[connection signal="mouse_entered" from="ColorRect/Start_Button" to="." method="_on_start_button_mouse_entered"]
[connection signal="pressed" from="ColorRect/Start_Button" to="." method="_on_start_button_pressed"]
[connection signal="mouse_entered" from="ColorRect/Item_Button" to="." method="_on_item_button_mouse_entered"]
[connection signal="mouse_entered" from="ColorRect/Store_Button" to="." method="_on_store_button_mouse_entered"]
[connection signal="mouse_entered" from="ColorRect/Setting_Button" to="." method="_on_setting_button_mouse_entered"]
[connection signal="mouse_entered" from="ColorRect/Setting_Button" to="ColorRect/Setting_Button" method="_on_mouse_entered"]
[connection signal="mouse_entered" from="ColorRect/Quit_Button" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="ColorRect/Quit_Button" to="." method="_on_quit_button_pressed"]
